@@ -235,9 +235,8 @@ struct client *checkServiceConnected(struct net_connector *con) {
     if (rv == 0) {
         // If we've exceeded our connect timeout, bail but try again.
         if (mstime() >= con->connect_timeout) {
-            errno = ETIMEDOUT;
-            fprintf(stderr, "%s: Connection timed out: %s%s port %s: %s\n",
-                    con->service->descr, con->address, con->port, con->resolved_addr, Modes.aneterr);
+            fprintf(stderr, "%s: Connection timed out: %s%s port %s\n",
+                    con->service->descr, con->address, con->port, con->resolved_addr);
             con->connecting = 0;
             anetCloseSocket(con->fd);
         }
@@ -369,6 +368,10 @@ struct client *serviceConnect(struct net_connector *con) {
     con->connecting = 1;
     con->connect_timeout = mstime() + 10 * 1000; // 10 sec TODO: Move to var
     con->fd = fd;
+
+    if (anetTcpKeepAlive(Modes.aneterr, fd) != ANET_OK) {
+        fprintf(stderr, "%s: Unable to set keepalive: connection to %s port %s ...\n", con->service->descr, con->address, con->port);
+    }
 
     // Since this is a non-blocking connect, it will always return right away.
     // We'll need to periodically check to see if it did, in fact, connect, but do it once here.
@@ -557,6 +560,9 @@ static struct client * modesAcceptClients(void) {
 
                     if (Modes.debug & MODES_DEBUG_NET) {
                         fprintf(stderr, "%s: New connection from %s port %s (fd %d)\n", c->service->descr, c->host, c->port, fd);
+                    }
+                    if (anetTcpKeepAlive(Modes.aneterr, fd) != ANET_OK) {
+                        fprintf(stderr, "%s: Unable to set keepalive on connection from %s port %s (fd %d)\n", c->service->descr, c->host, c->port, fd);
                     }
                 } else {
                     fprintf(stderr, "%s: New client accept failed: %s\n", s->descr, Modes.aneterr);
@@ -1859,7 +1865,7 @@ static void compute_wind(struct aircraft *a) {
             double hw = tas - cos(crab) * gs;
             double cw = sin(crab) * gs;
             a->meta.wind_speed = (uint32_t) round(sqrt(hw * hw + cw * cw));
-            if(a->meta.wind_speed > 250) {
+            if (a->meta.wind_speed > 250) {
                 return;
             }
             double wd = hdg + atan2(cw, hw);
